--- a/ios/rntemplate/Info.plist
+++ b/ios/rntemplate/Info.plist
@@ -29,7 +29,8 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1034133353106-b2iq7gc68nulq1ifn080igj1jr3p9296</string>
+					<string>com.googleusercontent.apps.1034133353106-b2iq7gc68nulq1ifn080igj1jr3p9296</string>
+				<!-- <string>DodaShah@123</string> -->
 			</array>
 		</dict>
 	</array>
